# Succint_RDF

./: CMakeLists.txt  Constant.hpp  RDFStorage.cpp  RDFStorage.hpp  RDFTypeStore.cpp  RDFTypeStore.hpp  README.md  TripleStore.cpp  TripleStore.hpp  main.cpp
test_data/: query.sparql
